fix(blog): picture stretch error

--- a/src/global.scss
+++ b/src/global.scss
@@ -111,6 +111,7 @@ img,
 picture {
   display: block;
   max-width: 100%;
+  height: auto;
 }
 
 :focus-visible {
